fix the z-indexing

--- a/src/app/components/landing/landing.component.css
+++ b/src/app/components/landing/landing.component.css
@@ -2,7 +2,8 @@
     position: absolute;
     height: 100vh;
     right: 15vw;
-    opacity: 0.6;
+    z-index: -1;
+    filter: brightness(30%)
 }
 
 @media only screen and (max-width: 600px) {
